; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_process_queue_manager.c_kfd_process_dequeue_from_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_process_queue_manager.c_kfd_process_dequeue_from_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kfd_process_device = type { i32, i32, %struct.kfd_dev* }
%struct.kfd_dev = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*, i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kfd_process_dequeue_from_device(%struct.kfd_process_device* %0) #0 {
  %2 = alloca %struct.kfd_process_device*, align 8
  %3 = alloca %struct.kfd_dev*, align 8
  store %struct.kfd_process_device* %0, %struct.kfd_process_device** %2, align 8
  %4 = load %struct.kfd_process_device*, %struct.kfd_process_device** %2, align 8
  %5 = getelementptr inbounds %struct.kfd_process_device, %struct.kfd_process_device* %4, i32 0, i32 2
  %6 = load %struct.kfd_dev*, %struct.kfd_dev** %5, align 8
  store %struct.kfd_dev* %6, %struct.kfd_dev** %3, align 8
  %7 = load %struct.kfd_process_device*, %struct.kfd_process_device** %2, align 8
  %8 = getelementptr inbounds %struct.kfd_process_device, %struct.kfd_process_device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %27

12:                                               ; preds = %1
  %13 = load %struct.kfd_dev*, %struct.kfd_dev** %3, align 8
  %14 = getelementptr inbounds %struct.kfd_dev, %struct.kfd_dev* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32 (%struct.TYPE_4__*, i32*)*, i32 (%struct.TYPE_4__*, i32*)** %17, align 8
  %19 = load %struct.kfd_dev*, %struct.kfd_dev** %3, align 8
  %20 = getelementptr inbounds %struct.kfd_dev, %struct.kfd_dev* %19, i32 0, i32 0
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %20, align 8
  %22 = load %struct.kfd_process_device*, %struct.kfd_process_device** %2, align 8
  %23 = getelementptr inbounds %struct.kfd_process_device, %struct.kfd_process_device* %22, i32 0, i32 1
  %24 = call i32 %18(%struct.TYPE_4__* %21, i32* %23)
  %25 = load %struct.kfd_process_device*, %struct.kfd_process_device** %2, align 8
  %26 = getelementptr inbounds %struct.kfd_process_device, %struct.kfd_process_device* %25, i32 0, i32 0
  store i32 1, i32* %26, align 8
  br label %27

27:                                               ; preds = %12, %11
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
